Added some css and now the page scroll untill the last message

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <div id="chat">
     	<ul id="sentMsg"></ul>
 	    <form>
-	      <input type="text" id="msg" placeholder="Say something" />
+	      <input type="text" id="msg" placeholder="Say something" autocomplete="off" />
 	    </form>
     </div>
 
