--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Socket.IO chat</title>
+	<title>Simple Chat</title>
 	<link rel="stylesheet" href="style/main.css">
 </head>
 <body>
